[tool.poetry]
name = "CTRL_Node"
version = "0.0.2"
description = "Various tools for managing or checking servers"
authors = ["NotTheRealWallyx"]
keywords = ["python", "scripts", "server", "tools", "dns", "records"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = ">=3.7"
dnspython = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.scripts]
CTRL_Node = "ctrl_node.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

